Closed
Bug 1347838
Opened 8 years ago
Closed 8 years ago
Assertion failure: !IsResolved() (already resolved), at /home/worker/workspace/build/src/layout/style/nsStyleStruct.cpp:2005
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla55
Tracking | Status | |
---|---|---|
firefox52 | --- | unaffected |
firefox-esr52 | --- | unaffected |
firefox53 | --- | unaffected |
firefox54 | --- | unaffected |
firefox55 | --- | fixed |
People
(Reporter: cbook, Assigned: heycam)
References
()
Details
(Keywords: assertion)
Attachments
(2 files)
Assertion failure: !IsResolved() (already resolved), at /home/worker/workspace/build/src/layout/style/nsStyleStruct.cpp:2005
found during topsite tests and reproduced on latest stylo debug build from tinderbox.
Steps to reproduce:
-> Load http://www.theatlanticcities.com
---> Assertion failure within 10 seconds of loading the page
Assignee | ||
Updated•8 years ago
|
Flags: needinfo?(cam)
Comment hidden (mozreview-request) |
Assignee | ||
Comment 2•8 years ago
|
||
I missed this when reviewing bug 1296477. (We need to check whether we've already resolve in case we e.g. inherited the same nsStyleImageRequest object from a parent, or we shared ServoComputedValues objects with another element.)
Flags: needinfo?(cam)
Comment 3•8 years ago
|
||
mozreview-review |
Comment on attachment 8848714 [details]
Bug 1347838 - stylo: Don't resolve images in nsStyleContentData objects twice.
https://reviewboard.mozilla.org/r/121614/#review123636
Attachment #8848714 -
Flags: review?(manishearth) → review+
Pushed by cmccormack@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/fa214885f96f
stylo: Don't resolve images in nsStyleContentData objects twice. r=manishearth
![]() |
||
Comment 5•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Updated•8 years ago
|
Assignee: nobody → cam
Blocks: 1296477
status-firefox52:
--- → unaffected
status-firefox53:
--- → unaffected
status-firefox54:
--- → unaffected
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•