Bug 1347838 - stylo: Don't resolve images in nsStyleContentData objects twice. r=manishearth

MozReview-Commit-ID: 7KQykNEmZYp